--- a/client/src/style.css
+++ b/client/src/style.css
@@ -12,22 +12,22 @@ body {
 #div1 {
   top: 0;
   left: 0;
-  background: #b0efef;
+  background: #55b1e2;
 }
 #div2 {
   top: 0;
   left: 50%;
-  background: #ffdac1;
+  background: #77c3ec;
 }
 #div3 {
   top: 50%;
   left: 0;
-  background: #ffb7b2;
+  background: #eb9359;
 }
 #div4 {
   top: 50%;
   left: 50%;
-  background: #9cd3f1;
+  background: #ffaf7a;
 }
 
 /* the Loader styling */
